Changed precheck resource to accept a list of partyIds instead of legalIds.
